--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src='/assets/application.js')
+    script(src='/javascripts/app.js')
   body
     block content
